代码进行了优化

--- a/src/main/webapp/resources/css/main/coalMillTable.css
+++ b/src/main/webapp/resources/css/main/coalMillTable.css
@@ -8,29 +8,38 @@
     width: 640px;
     border: 1px solid black;
     text-align: center;
+    background-color: #2a2a2b;
+    color:#ffffff;
+    font-family: "宋体", serif;
+    font-size:10px;
+    border-top:1px solid white
+}
+.coalMillTableDivClass table td{
+    height:20px;
+
 }
 
 .coalMillTableDivClass td, th {
-    border: 1px solid black;
+    border:1px solid #595959;
 
 }
 
 #coalMillTableADiv {
-    top: 470px;
+    top: 430px;
     left: 100px;
 }
 
 #coalMillTableBDiv {
-    top: 470px;
+    top: 430px;
     left: 900px;
 }
 
 #coalMillTableCDiv {
-    top: 1020px;
+    top: 880px;
     left: 100px;
 }
 
 #coalMillTableDDiv {
-    top: 1020px;
+    top: 880px;
     left: 900px;
 }
