--- a/src/main/webapp/resources/css/ddsmoothmenu.css
+++ b/src/main/webapp/resources/css/ddsmoothmenu.css
@@ -1,10 +1,11 @@
 .ddsmoothmenu{
-    font: bold 16px "宋体", serif;
+    font: normal 18px "微软雅黑", serif;
     background: #414141; /*backgr
 
     ound of menu bar (default state)*/
     width: 100%;
     display: none;
+    padding-top:-8px;
 }
 
 .ddsmoothmenu ul{
@@ -12,6 +13,7 @@
     margin-top: 0;
     padding: 0;
     list-style-type: none;
+
 }
 
 /*Top level list items*/
@@ -19,6 +21,8 @@
     position: relative;
     display: inline;
     float: left;
+    width:120px;
+    text-align:center;
 }
 
 /*Top level menu link items style*/
@@ -26,7 +30,7 @@
     display: block;
     background: #414141; /*background of menu items (default state)*/
     color: white;
-    padding: 8px 10px;
+    padding: 12px 20px;
     border-right: 1px solid #778;
     color: #2d2b2b;
     text-decoration: none;
